// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogCard /> Should render correctly 1`] = `
<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE"
    href="/blog/asdfg"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-ftvSup ePJXaK"
        >
          <div
            class="sc-papXJ diveQv date container"
          >
            <div
              class="sc-iqcoie gTFDDN"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="sc-crXcEl buGyTA"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                NaN
              </span>
            </div>
            <div
              class="sc-crXcEl buGyTA"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="sc-jqUVSM elkaFX"
          >
            <h1
              class="sc-hAZoDl eNenGa"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly when deleted 1`] = `
<div>
  <a
    aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
    class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE"
    href="/blog/mndyd8"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-ftvSup ePJXaK"
        >
          <div
            class="sc-papXJ diveQv date container"
          >
            <div
              class="sc-iqcoie gTFDDN"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-crXcEl buGyTA"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-crXcEl buGyTA"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-jqUVSM elkaFX"
          >
            <h1
              class="sc-hAZoDl eNenGa"
            >
              Untitled blog (DELETED)
            </h1>
            <div
              class="sc-breuTD gcBLVY"
            >
              <div
                class="sc-dIouRR"
              >
                <span
                  class="sc-hHLeRK cDihOF"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-kDDrLX foETbC"
          >
            <div
              class="image__outer sc-evZas iqencj"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="sc-jSMfEi detKc image__skeleton image__skeleton--animated"
                  >
                    <div
                      class="sc-gKXOVf ihacwt"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--animated image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--animated image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <noscript />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with all parameters supplied 1`] = `
<div>
  <a
    aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
    class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE"
    href="/blog/zxywvuts"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-ftvSup ePJXaK"
        >
          <div
            class="sc-papXJ diveQv date container"
          >
            <div
              class="sc-iqcoie gTFDDN"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-crXcEl buGyTA"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-crXcEl buGyTA"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-jqUVSM elkaFX"
          >
            <h1
              class="sc-hAZoDl eNenGa"
            >
              St Ives  2018
            </h1>
            <div
              class="sc-breuTD gcBLVY"
            >
              <div
                class="sc-dIouRR"
              >
                <span
                  class="sc-hHLeRK cDihOF"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-kDDrLX foETbC"
          >
            <div
              class="image__outer sc-evZas iqencj"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="sc-jSMfEi detKc image__skeleton image__skeleton--animated"
                  >
                    <div
                      class="sc-gKXOVf ihacwt"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--animated image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--animated image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <noscript />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with custom className 1`] = `
<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE test-custom-classname"
    href="/blog/asdfg"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-ftvSup ePJXaK"
        >
          <div
            class="sc-papXJ diveQv date container"
          >
            <div
              class="sc-iqcoie gTFDDN"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="sc-crXcEl buGyTA"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                NaN
              </span>
            </div>
            <div
              class="sc-crXcEl buGyTA"
            >
              <span
                class="sc-bjUoiL goaXoV"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="sc-jqUVSM elkaFX"
          >
            <h1
              class="sc-hAZoDl eNenGa"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogsList /> Should render correctly 1`] = `
<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE blogs-list__card"
      href="/blog/asdfg"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-ftvSup ePJXaK"
          >
            <div
              class="sc-papXJ diveQv date container"
            >
              <div
                class="sc-iqcoie gTFDDN"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-jqUVSM elkaFX"
            >
              <h1
                class="sc-hAZoDl eNenGa"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE blogs-list__card"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-ftvSup ePJXaK"
          >
            <div
              class="sc-papXJ diveQv date container"
            >
              <div
                class="sc-iqcoie gTFDDN"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-jqUVSM elkaFX"
            >
              <h1
                class="sc-hAZoDl eNenGa"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-breuTD gcBLVY"
              >
                <div
                  class="sc-dIouRR"
                >
                  <span
                    class="sc-hHLeRK cDihOF"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-kDDrLX foETbC"
            >
              <div
                class="image__outer sc-evZas iqencj"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="sc-jSMfEi detKc image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE blogs-list__card"
      href="/blog/mndyd8"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-ftvSup ePJXaK"
          >
            <div
              class="sc-papXJ diveQv date container"
            >
              <div
                class="sc-iqcoie gTFDDN"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-jqUVSM elkaFX"
            >
              <h1
                class="sc-hAZoDl eNenGa"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-breuTD gcBLVY"
              >
                <div
                  class="sc-dIouRR"
                >
                  <span
                    class="sc-hHLeRK cDihOF"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-kDDrLX foETbC"
            >
              <div
                class="image__outer sc-evZas iqencj"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="sc-jSMfEi detKc image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="test-custom-classname"
  >
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE blogs-list__card"
      href="/blog/asdfg"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-ftvSup ePJXaK"
          >
            <div
              class="sc-papXJ diveQv date container"
            >
              <div
                class="sc-iqcoie gTFDDN"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-jqUVSM elkaFX"
            >
              <h1
                class="sc-hAZoDl eNenGa"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE blogs-list__card"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-ftvSup ePJXaK"
          >
            <div
              class="sc-papXJ diveQv date container"
            >
              <div
                class="sc-iqcoie gTFDDN"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-jqUVSM elkaFX"
            >
              <h1
                class="sc-hAZoDl eNenGa"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-breuTD gcBLVY"
              >
                <div
                  class="sc-dIouRR"
                >
                  <span
                    class="sc-hHLeRK cDihOF"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-kDDrLX foETbC"
            >
              <div
                class="image__outer sc-evZas iqencj"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="sc-jSMfEi detKc image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE blogs-list__card"
      href="/blog/mndyd8"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-ftvSup ePJXaK"
          >
            <div
              class="sc-papXJ diveQv date container"
            >
              <div
                class="sc-iqcoie gTFDDN"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-jqUVSM elkaFX"
            >
              <h1
                class="sc-hAZoDl eNenGa"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-breuTD gcBLVY"
              >
                <div
                  class="sc-dIouRR"
                >
                  <span
                    class="sc-hHLeRK cDihOF"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-kDDrLX foETbC"
            >
              <div
                class="image__outer sc-evZas iqencj"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="sc-jSMfEi detKc image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with deleteBlog function 1`] = `
<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE blogs-list__card blogs-list__card--with-controls"
      href="/blog/asdfg"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-ftvSup ePJXaK"
          >
            <div
              class="sc-papXJ diveQv date container"
            >
              <div
                class="sc-iqcoie gTFDDN"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-jqUVSM elkaFX"
            >
              <h1
                class="sc-hAZoDl eNenGa"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-fLlhyt iTehKW blogs-list__control"
      type="button"
    >
      <span
        class="sc-ivTmOn ldRQgB"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE blogs-list__card blogs-list__card--with-controls"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-ftvSup ePJXaK"
          >
            <div
              class="sc-papXJ diveQv date container"
            >
              <div
                class="sc-iqcoie gTFDDN"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-jqUVSM elkaFX"
            >
              <h1
                class="sc-hAZoDl eNenGa"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-breuTD gcBLVY"
              >
                <div
                  class="sc-dIouRR"
                >
                  <span
                    class="sc-hHLeRK cDihOF"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-kDDrLX foETbC"
            >
              <div
                class="image__outer sc-evZas iqencj"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="sc-jSMfEi detKc image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-fLlhyt iTehKW blogs-list__control"
      type="button"
    >
      <span
        class="sc-ivTmOn ldRQgB"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE blogs-list__card blogs-list__card--with-controls"
      href="/blog/mndyd8"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-ftvSup ePJXaK"
          >
            <div
              class="sc-papXJ diveQv date container"
            >
              <div
                class="sc-iqcoie gTFDDN"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-crXcEl buGyTA"
              >
                <span
                  class="sc-bjUoiL goaXoV"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-jqUVSM elkaFX"
            >
              <h1
                class="sc-hAZoDl eNenGa"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-breuTD gcBLVY"
              >
                <div
                  class="sc-dIouRR"
                >
                  <span
                    class="sc-hHLeRK cDihOF"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-kDDrLX foETbC"
            >
              <div
                class="image__outer sc-evZas iqencj"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="sc-jSMfEi detKc image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-fLlhyt gMsGea blogs-list__control"
      disabled=""
      type="button"
    >
      <span
        class="sc-ivTmOn ldRQgB"
      >
        Delete blog
      </span>
    </button>
  </div>
</div>
`;
